objects/Business_Impact__c.object
<CustomObject>
    <fields>
        <fullName>Business_Impact_Name__c</fullName>
        <label>Business Impact Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Potential_Risk_ID__c</fullName>
        <label>Potential Risk ID</label>
        <referenceTo>Potential_Risk__c</referenceTo>
        <relationshipLabel>Business Impact</relationshipLabel>
        <relationshipName>Business_Impact</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Business Impact</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Business_Impact_Name__c</columns>
        <columns>Potential_Risk_ID__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BI-{0000000000}</displayFormat>
        <label>Business Impact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Impact</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>